public interface Bayar {
    void prosesPembayaran(double jumlah);

    void tampilkanMetodePembayaran();
}
