public interface TampilkanInfo {
    void tampilkanInfo();
}
